--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Miha Stih",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mysql2": "^3.6.5",
     "nodemon": "^3.0.2"
   }
 }
