--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,11 @@
   "author": "Miha Stih",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "ical.js": "^1.5.0",
     "mysql2": "^3.6.5",
     "nodemon": "^3.0.2",
