--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
+    "base-x": "^4.0.0",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.69.6"
+    "sass": "^1.69.6",
+    "universal-cookie": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
