--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "express-session": "^1.17.3",
     "ical.js": "^1.5.0",
     "mysql2": "^3.6.5",
-    "nodemon": "^3.0.2",
+    "nodemon": "^3.0.3",
+    "path": "^0.12.7",
     "tempfile": "^5.0.0"
   }
 }
